# oss-health-monitor

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  design_document.md
.github/workflows/: ci.yml  docker.yml
alembic/: env.py
app/: __init__.py  config.py  database.py  database_init.py  main.py
app/clients/: __init__.py  github.py
app/integrations/: __init__.py  base.py  github_advisory.py  osv_scanner.py
app/middleware/: __init__.py  auth.py
app/models/: __init__.py  auth.py  repository.py  scan.py
app/routes/: health.py  scan.py
app/schemas/: __init__.py
app/services/: __init__.py  cache.py  metrics_calculator.py  scanner_orchestrator.py
scripts/: example_scan.py  init_db.py  manage_api_keys.py
tests/: conftest.py  test_config.py  test_health.py
